# prcatice-wayland

./: .gitignore  CMakeLists.txt  README.md  build.ninja  build.sh
src/: mainapp.cpp  simple.cpp
src/wrapper/: keyboard_listener.cpp  keyboard_listener.hpp  pointer_listener.cpp  pointer_listener.hpp  registry_listener.cpp  registry_listener.hpp  seat_listener.cpp  seat_listener.hpp  shellsurface_listener.cpp  shellsurface_listener.hpp  touch_listener.cpp  touch_listener.hpp  wayland_client.cpp  wayland_client.hpp
src/wrapper/util/: log.h
